--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-router-dom": "^6.26.0",
     "sweetalert2": "^11.12.4",
     "swiper": "^11.1.11",
-    "swiper-react": "^1.0.0"
+    "swiper-react": "^1.0.0",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
